--- a/src/pages/AddPost/AddPost.module.scss
+++ b/src/pages/AddPost/AddPost.module.scss
@@ -42,3 +42,12 @@
     margin-right: 15px;
   }
 }
+
+.upload {
+  position: absolute;
+  margin-top: -15px;
+}
+
+.cancel_btn {
+  margin-left: 80px;
+}
